--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "@nestjs/mapped-types": "^1.0.1",
         "@nestjs/microservices": "^8.4.4",
         "@nestjs/platform-express": "^8.0.0",
+        "@nestjs/schedule": "^1.1.0",
         "knex": "^1.0.7",
         "nats": "^2.6.1",
         "nest-knexjs": "^0.0.9",
@@ -40,6 +41,7 @@
         "@nestjs/cli": "^8.0.0",
         "@nestjs/schematics": "^8.0.0",
         "@nestjs/testing": "^8.0.0",
+        "@types/cron": "^1.7.3",
         "@types/express": "^4.17.13",
         "@types/jest": "27.4.1",
         "@types/node": "^16.0.0",
