--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "reflect-metadata": "^0.1.13",
         "rimraf": "^3.0.2",
         "rxjs": "^7.2.0",
+        "stopword": "^2.0.2",
         "twitter-api-v2": "^1.12.0"
     },
     "devDependencies": {
