--- a/package.json
+++ b/package.json
@@ -31,12 +31,12 @@
         "@nestjs/schedule": "^1.1.0",
         "knex": "^1.0.7",
         "nats": "^2.6.1",
+        "natural": "^5.1.13",
         "nest-knexjs": "^0.0.9",
         "pg": "^8.7.3",
         "reflect-metadata": "^0.1.13",
         "rimraf": "^3.0.2",
         "rxjs": "^7.2.0",
-        "stopword": "^2.0.2",
         "twitter-api-v2": "^1.12.0"
     },
     "devDependencies": {
