--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "rimraf": "^3.0.2",
         "rxjs": "^7.2.0",
         "stopword": "^2.0.2",
+        "twitter": "^1.7.1",
         "twitter-api-v2": "^1.12.0"
     },
     "devDependencies": {
